Event package updated and modernized. Author info updated.